# saw-script

./: .dir-locals.el  .dockerignore  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CommandExec.hs  Dockerfile  Dockerfile-remote-api  EnumLib.sawcore  EnumLib2.sawcore  LICENSE  Lexer.x  Main.hs  Makefile  MethodAST.hs  MethodSpec.hs  Parser.y  ParserActions.hs  ParserActions.hs-boot  README  README.md  SAWScript.hs  SAWScriptMain.hs  SAWScriptParser.y  Setup.hs  SimpleTypechecker.hs  TIMonad.hs  Test.sawcore  Token.hs  TypeChecker.hs  Unlit.hs  Utils.hs  build-sandbox-version-pins.txt  build-sandbox.sh  build.sh  (+75 more)
crucible-mir-comp/: README.md  crucible-mir-comp.cabal
crux-mir-comp/: .gitignore  DESIGN.md  Dockerfile  README.md  crux-mir-comp.cabal
crux-mir-comp/exe/: Main.hs
crux-mir-comp/src/Mir/: Compositional.hs  Cryptol.hs  State.hs
crux-mir-comp/test/: Test.hs
cryptol-saw-core/: LICENSE  README.md  cryptol-saw-core.cabal
cryptol-saw-core/css/: Main.hs
cryptol-saw-core/saw/: Cryptol.sawcore  CryptolM.sawcore  SpecM.sawcore
cryptol-saw-core/src/CryptolSAWCore/: Cryptol.hs  CryptolEnv.hs  FileReader.hs  GlobalCryptolEnv.hs  Module.hs  Monadify.hs  Panic.hs  Prelude.hs  PreludeM.hs  Pretty.hs  SAWCoreCryptol.hs  Simpset.hs  TypedTerm.hs
cryptol-saw-core/test/: CryptolVerifierTC.hs  instance.cry  superclass.cry
examples/haskell-script/: dotprod_struct.hs  haskell-example.cabal
heapster-saw/: .gitignore  README.md  heapster-saw.cabal
heapster-saw/doc/: ImplProver.md  Lifetimes.md  Permissions.md  RustTrans.md
heapster-saw/doc/tutorial/: tutorial.md
heapster-saw/examples/: .gitignore  Dilithium2.cry  Dilithium2.saw  Makefile  PrecondHint.cry  SpecPrims.cry  _CoqProject  arrays.bc  arrays.c  arrays.cry  arrays.saw  arrays.sawcore  arrays.v  arrays_mr_solver.saw  arrays_proofs.v  c_data.bc  c_data.c  c_data.saw  c_data_proofs.v  clearbufs.saw  clearbufs.sawcore  clearbufs.v  clearbufs_proofs.v  common.v  either.saw  exp_explosion.bc  exp_explosion.c  exp_explosion.saw  exp_explosion_mr_solver.saw  exp_explosion_proofs.v  fun_ptr.c  global_var.bc  global_var.c  global_var.saw  global_var.sawcore  gt0.c  higher_order_mr_solver.saw  interp.bc  interp.cry  interp.rs  (+80 more)
heapster-saw/examples/bc-annot/: foo.sawcore
heapster-saw/proverTests/: Main.hs
heapster-saw/src/Heapster/: CruUtil.hs  Implication.hs  JSONExport.hs  LLVMGlobalConst.hs  Lexer.x  Located.hs  NamePropagation.hs  NamedMb.hs  ParsedCtx.hs  PermParser.hs  Permissions.hs  SAWTranslation.hs  TypedCrucible.hs
intTests/test_yosys_cells/: .gitignore  InstantiateCells.hs  Makefile  YosysSpecs.hs  instantiate_cells.hs  test.1.saw  test.2.saw  test.3.saw  test.4.saw  test.5.saw  test.6.saw  test.json  test.saw  test.sh  util.cry  yosys-cell-tests.cabal  yosys_specs.hs
rme/: LICENSE  README.md  rme.cabal
saw/: Cryptol.cry  Cryptol.sawcore  Dockerfile  Main.hs  commands.py  connection.py  generate_MEE_CBC.saw  generate_scaffolding.saw  saw.cabal
saw-core/: .gitignore  README.md  saw-core.cabal  saw-core.el
saw-core-aig/: README.md  saw-core-aig.cabal
saw-core-aig/src/SAWCoreAIG/: BitBlast.hs  Panic.hs
saw-core-coq/: .gitignore  LICENSE  README.md  saw-core-coq.cabal
saw-core-coq/coq/: .gitignore  Makefile  _CoqProject
saw-core-coq/coq/handwritten/: MEE_CBC_proofs.v
saw-core-coq/cryptol/: MEE_CBC.cry
saw-core-coq/saw/: generate_MEE_CBC.saw  generate_scaffolding.saw
saw-core-coq/src/SAWCoreCoq/: Coq.hs  CryptolModule.hs  Monad.hs  SAWModule.hs  SpecialTreatment.hs  Term.hs
saw-core-sbv/: README.md  saw-core-sbv.cabal
saw-core-sbv/src/SAWCoreSBV/: Panic.hs  SBV.hs  SWord.hs
saw-core-what4/: Changelog.md  LICENSE  README.md  saw-core-what4.cabal
saw-core-what4/SAWCoreWhat4/: What4.hs
saw-core-what4/src/SAWCoreWhat4/: Common.hs  FirstOrder.hs  Panic.hs  PosNat.hs  Position.hs  ReturnTrip.hs  Uninterp.hs  What4.hs
saw-core/doc/: formal.tex
saw-core/prelude/: Prelude.sawcore
saw-core/src/SAWCore/: Cache.hs  Change.hs  Constant.hs  Conversion.hs  ExternalFormat.hs  Fingerprint.hs  FiniteValue.hs  FloatHelpers.hs  Grammar.y  Module.hs  Name.hs  OpenTerm.hs  Panic.hs  ParserUtils.hs  Position.hs  Prelude.hs  Prim.hs  QualName.hs  Recognizer.hs  Rewriter.hs  SATQuery.hs  SAWCore.hs  SCTypeCheck.hs  SCTypedTerm.hs  SharedTerm.hs  Simulator.hs  Term.hs  TermNet.hs  Typechecker.hs  TypedAST.hs  URI.hs  UnionFind.hs  Unique.hs  UntypedAST.hs  Utils.hs
saw-core/src/Verifier/: SAW.hs
saw-core/tests/src/: Tests.hs
saw-lsp/: saw-lsp.cabal
saw-lsp/app/: Main.hs
saw-lsp/src/: Error.hs  FList.hs  Handlers.hs  Logging.hs  Message.hs  Monad.hs  REPL.hs  Reactor.hs  Responder.hs  SAW.hs  SAWLib.hs  SAWT.hs  Sample.hs  Server.hs  Stack.hs  Worker.hs  WorkerGovernor.hs
saw-lsp/src/Handlers/: Initialized.hs
saw-lsp/src/Responder/: Result.hs
saw-lsp/src/SAWT/: Checkpoint.hs  IO.hs  Interpret.hs  Monad.hs  State.hs
saw-lsp/src/Server/: Config.hs  Error.hs  Monad.hs  Reactor.hs  Worker.hs
saw-lsp/src/Util/: FList.hs  Stack.hs
saw-lsp/src/Worker/: Truncate.hs
saw-lsp/test/: Main.hs
saw-lsp/test/Test/: FList.hs  Stack.hs
saw-python/: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
saw-python/saw_client/: __init__.py  commands.py  connection.py  exceptions.py  jvm.py  jvm_type.py  llvm_type.py  mir.py  mir_type.py  proofscript.py  solver_cache.py
saw-python/tests/saw/: test_alloc_aligned.py  test_ghost.py  test_llvm_global_mutable.py  test_llvm_lax_pointer_ordering.py  test_llvm_pointer.py  test_mir_arrays.py  test_mir_const_generics.py  test_mir_enums.py  test_mir_find_mangled_adt.py  test_mir_fresh_expanded_value.py  (+11 more)
saw-remote-api/python/: CHANGELOG.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
saw-tools/exception-lower/: CMakeLists.txt  ExceptionLowerPass.cpp  ExceptionLowerPass.h  README.md  main.cpp
saw/SAWScript/: GitRev.hs  REPL.hs  Version.hs
saw/app/: Main.hs
verif-viewer/: LICENSE  verif-viewer.cabal
verif-viewer/tools/: VerifViewer.hs
(+12992 files in other folders)
