Name:              cryptol-verifier
Version:           0.1
Author:            Galois, Inc.
License:           BSD3
License-file:      LICENSE
Maintainer:        huffman@galois.com
Copyright:         (c) 2014 Galois Inc.
Build-type:        Simple
cabal-version:     >= 1.8
Category:          Formal Methods
Synopsis:          Representing Cryptol in SAWCore
Description:
  Translate Cryptol syntax into SAWCore terms, which can then
  be analysed by various backend proof systems.

extra-source-files:
    saw/Cryptol.sawcore

flag build-css
  description: Build the css executable
  default: True

library
  build-depends:
    array,
    base == 4.*,
    containers,
    cryptol,
    saw-core
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW.Cryptol
     Verifier.SAW.Cryptol.Prelude
  GHC-options: -Wall -Werror

executable css
  if !flag(build-css)
     buildable: False

  build-depends:
    array,
    abcBridge,
    base == 4.*,
    containers,
    cryptol,
    saw-core,
    cryptol-verifier

  hs-source-dirs : css
  main-is : Main.hs
  GHC-options: -Wall -O2 -rtsopts
