Name:              cryptol-verifier
Version:           0.1
Author:            Galois, Inc.
License:           BSD3
License-file:      LICENSE
Maintainer:        huffman@galois.com
Copyright:         (c) 2014 Galois Inc.
Build-type:        Simple
cabal-version:     >= 1.8
Category:          Formal Methods
Synopsis:          Representing Cryptol in SAWCore
Description:
  Translate Cryptol syntax into SAWCore terms, which can then
  be analysed by various backend proof systems.

extra-source-files:
    saw/Cryptol.sawcore

flag build-css
  description: Build the css executable
  default: True

library
  build-depends:
    aig,
    array,
    base,
    base-compat,
    containers,
    cryptol >= 2.3.0,
    data-inttrie >= 0.1.4,
    integer-gmp,
    saw-core,
    saw-core-aig,
    saw-core-sbv,
    saw-core-what4,
    what4,
    sbv,
    vector,
    text,
    executable-path,
    filepath
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW.Cryptol
     Verifier.SAW.Cryptol.Prelude
     Verifier.SAW.Cryptol.Prims
     Verifier.SAW.Cryptol.Simpset
     Verifier.SAW.CryptolEnv
     Verifier.SAW.TypedTerm
  GHC-options: -Wall -Werror

executable css
  if !flag(build-css)
     buildable: False

  other-modules:
    Paths_cryptol_verifier

  build-depends:
    array,
    abcBridge,
    base,
    containers,
    cryptol,
    saw-core,
    saw-core-aig,
    text,
    cryptol-verifier

  hs-source-dirs : css
  main-is : Main.hs
  GHC-options: -Wall -O2 -rtsopts -pgmlg++
  extra-libraries:      stdc++
