Name:               saw-core
Version:            0.1
License:            BSD3
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         jhendrix@galois.com
Copyright:          (c) 2012-2014 Galois Inc.
Category:           Formal Methods
Build-type:         Simple
cabal-version:      >= 1.8
Synopsis:           SAWCore intermediate language
Description:
  The implementation of the SAWCore intermediate language,
  used by LSS, JSS, and SAWScript

extra-source-files:
    prelude/Prelude.sawcore

library
  build-tools:
    alex >= 3.1.3,
    happy >= 1.9.4

  build-depends:
    base == 4.*,
    aig,
    ansi-wl-pprint,
    array,
    binary,
    bytestring,
    containers,
    data-inttrie,
    directory,
    filepath,
    ghc-prim,
    hashable >= 1.2,
    lens >= 3.8,
    MonadRandom,
    mtl,
    pretty,
    random,
    ref-fd,
    sbv >= 4.1,
    template-haskell,
    tf-random,
    transformers,
    transformers-compat,
    unordered-containers,
    utf8-string,
    vector
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW
     Verifier.SAW.Constant
     Verifier.SAW.ExternalFormat
     Verifier.SAW.Conversion
     Verifier.SAW.Cache
     Verifier.SAW.FiniteValue
     Verifier.SAW.Grammar
     Verifier.SAW.Lexer
     Verifier.SAW.ParserUtils
     Verifier.SAW.Prelude
     Verifier.SAW.Prelude.Constants
     Verifier.SAW.PrettySExp
     Verifier.SAW.Prim
     Verifier.SAW.Recognizer
     Verifier.SAW.Rewriter
     Verifier.SAW.SCTypeCheck
     Verifier.SAW.Simulator
     Verifier.SAW.Simulator.BitBlast
     Verifier.SAW.Simulator.Concrete
     Verifier.SAW.Simulator.MonadLazy
     Verifier.SAW.Simulator.Prims
     Verifier.SAW.Simulator.SBV
     Verifier.SAW.Simulator.SBV.SWord
     Verifier.SAW.Simulator.Value
     Verifier.SAW.SharedTerm
     Verifier.SAW.TermNet
     Verifier.SAW.Testing.Random
     Verifier.SAW.Typechecker
     Verifier.SAW.TypedAST
     Verifier.SAW.Change
  other-modules:
     Verifier.SAW.Position
     Verifier.SAW.Typechecker.Context
     Verifier.SAW.Typechecker.Monad
     Verifier.SAW.Typechecker.Simplification
     Verifier.SAW.Typechecker.Unification
     Verifier.SAW.UnionFind
     Verifier.SAW.UntypedAST
     Verifier.SAW.Utils
  GHC-options: -Wall -Werror
  GHC-prof-options: -auto-all -caf-all
  extensions:
    DeriveFunctor
    GeneralizedNewtypeDeriving
    ImplicitParams
    ViewPatterns

test-suite test-sawcore
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests/src
  build-depends:
      base >= 4
    , abcBridge
    , containers
    , hashable
    , lens
    , mtl
    , saw-core
    , time
    , unordered-containers
    , vector
    , ansi-wl-pprint
    , QuickCheck >= 2.7
    , tasty
    , tasty-ant-xml
    , tasty-hunit
    , tasty-quickcheck
    , tagged

  other-modules:
    Tests.Parser
    Tests.Rewriter
    Tests.SharedTerm

executable extcore-info
  main-is: extcore-info.hs
  hs-source-dirs: tools
  build-depends:
      base >= 4
    , saw-core
