Cabal-version: 3.0
Name:          saw-script
Version:       1.3.0.99
Author:        Galois Inc.
Maintainer:    atomb@galois.com
Build-type:    Simple
License:       BSD-3-Clause
License-file:  LICENSE

extra-source-files:
    src/SAWScript/Parser.y
    src/SAWScript/Lexer.x

library saw-version
  default-language: Haskell2010
  visibility: public
  build-depends:
      base >= 4.9

  hs-source-dirs: saw-version/src
  exposed-modules:
      SAWVersion.GitRev
      SAWVersion.Version

  other-modules:
    Paths_saw_script
  autogen-modules:
    Paths_saw_script

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count

library saw-central
  default-language: Haskell2010
  visibility: public
  build-depends:

      -- upstream packages from hackage
      base >= 4.9
    , aeson >= 2.0 && < 2.3
    , binary
    , bimap
    , bytestring
    , cborg-json
    , containers
    , constraints >= 0.6
    , cryptohash-sha256 >= 0.11.102.1
    , deepseq
    , directory >= 1.2.4.0
    , exceptions
    , extra
    , filepath
    , indexed-traversable
    , lens
    , modern-uri >= 0.3.2 && < 0.4
    , mtl >= 2.1
    , old-locale
    , old-time
    , panic
    , pretty
    , prettyprinter
    , process
    , reflection
    , sbv >= 9.1 && < 10.11
    , serialise
    , split
    , temporary
    , text
    , time
    , transformers
    , unordered-containers
    , utf8-string
    , vector
    , zenc
       -- apparently no longer used:
       --   either
       --   executable-path
       --   fgl
       --   parsec
       --   QuickCheck
       --   template-haskell
       --   transformers-compat

      -- galois packages from hackage
    , bv-sized >= 1.0 && < 1.1

      -- packages in git submodules
      -- (hobbits is for now actually a source-repository-package)
    , aig
    , crucible >= 0.4
    , crucible-jvm
    , crucible-llvm >= 0.2
    , crucible-mir
    , cryptol
    , elf-edit
    , galois-dwarf >= 0.2.2
    , hobbits >= 1.3.1
    , jvm-parser
    , language-sally
    , llvm-pretty >= 0.8
    , llvm-pretty-bc-parser >= 0.1.3.1
    , lmdb-simple
    , macaw-base
    , macaw-x86
    , macaw-symbolic
    , macaw-x86-symbolic
    , parameterized-utils
    , what4 >= 0.4
    , what4-transition-system
       -- apparently no longer used:
       --   flexdis86

      -- internal subpackages/sublibraries in the saw tree
    , cryptol-saw-core
    , heapster-saw
    , rme
    , saw-core
    , saw-core-aig
    , saw-core-coq
    , saw-core-sbv
    , saw-core-what4
    , saw-script:saw-version

  hs-source-dirs: saw-central/src

  exposed-modules:
    SAWCentral.Options
    SAWCentral.Position
    SAWCentral.Utils
    SAWCentral.AST
    SAWCentral.ASTUtil
    SAWCentral.Exceptions
    SAWCentral.CongruenceClosure
    SAWCentral.JavaExpr
    SAWCentral.JavaPretty
    SAWCentral.ImportAIG
    SAWCentral.SBVParser
    SAWCentral.SBVModel

    SAWCentral.Yosys.Utils
    SAWCentral.Yosys.Theorem
    SAWCentral.Yosys.IR
    SAWCentral.Yosys.Cell
    SAWCentral.Yosys.Netgraph
    SAWCentral.Yosys.State
    SAWCentral.Yosys.TransitionSystem
    SAWCentral.Yosys

    SAWCentral.MRSolver.Monad
    SAWCentral.MRSolver.SMT
    SAWCentral.MRSolver.Solver
    SAWCentral.MRSolver.Evidence
    SAWCentral.MRSolver.Term

    SAWCentral.Prover.Rewrite
    SAWCentral.Prover.SolverStats
    SAWCentral.Prover.Util
    SAWCentral.Prover.SBV
    SAWCentral.Prover.MRSolver
    SAWCentral.Prover.RME
    SAWCentral.Prover.ABC
    SAWCentral.Prover.What4
    SAWCentral.Prover.Exporter
    SAWCentral.Prover.Versions

    SAWCentral.Crucible.Common
    SAWCentral.Crucible.Common.MethodSpec
    SAWCentral.Crucible.Common.Override
    SAWCentral.Crucible.Common.ResolveSetupValue
    SAWCentral.Crucible.Common.Setup.Builtins
    SAWCentral.Crucible.Common.Setup.Type
    SAWCentral.Crucible.Common.Setup.Value

    SAWCentral.Crucible.LLVM.Builtins
    SAWCentral.Crucible.LLVM.Boilerplate
    SAWCentral.Crucible.LLVM.CrucibleLLVM
    SAWCentral.Crucible.LLVM.FFI
    SAWCentral.Crucible.LLVM.Override
    SAWCentral.Crucible.LLVM.MethodSpecIR
    SAWCentral.Crucible.LLVM.ResolveSetupValue
    SAWCentral.Crucible.LLVM.Setup.Value
    SAWCentral.Crucible.LLVM.Skeleton
    SAWCentral.Crucible.LLVM.Skeleton.Builtins
    SAWCentral.Crucible.LLVM.X86

    SAWCentral.Crucible.JVM.Builtins
    SAWCentral.Crucible.JVM.BuiltinsJVM
    SAWCentral.Crucible.JVM.MethodSpecIR
    SAWCentral.Crucible.JVM.Override
    SAWCentral.Crucible.JVM.ResolveSetupValue
    SAWCentral.Crucible.JVM.Setup.Value

    SAWCentral.Crucible.MIR.Builtins
    SAWCentral.Crucible.MIR.MethodSpecIR
    SAWCentral.Crucible.MIR.Override
    SAWCentral.Crucible.MIR.ResolveSetupValue
    SAWCentral.Crucible.MIR.Setup.Value
    SAWCentral.Crucible.MIR.TypeShape

    SAWCentral.X86
    SAWCentral.X86Spec

    SAWCentral.Bisimulation
    SAWCentral.BisimulationTheorem

    SAWCentral.Builtins
    SAWCentral.LLVMBuiltins
    SAWCentral.Proof
    SAWCentral.SolverCache
    SAWCentral.SolverVersions
    SAWCentral.TopLevel
    SAWCentral.VerificationSummary

    SAWCentral.Value

  other-modules:
    SAWCentral.Panic

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count
  if impl(ghc == 8.0.1)
    ghc-options: -Wno-redundant-constraints

library
  default-language: Haskell2010
  build-depends:

      -- upstream packages from hackage
      base >= 4.9
    , array
    , bytestring
    , containers
    , directory >= 1.2.4.0
    , extra
    , filepath
    , free
    , IfElse
    , lens
    , mtl >= 2.1
    , panic
    , pretty
    , prettyprinter
    , pretty-show
    , process
    , terminal-size
    , text
    , transformers

      -- packages in git submodules
      -- (hobbits is for now actually a source-repository-package)
    , aig
    , crucible >= 0.4
    , crucible-jvm
    , crucible-llvm >= 0.2
    , crucible-mir
    , cryptol
    , hobbits >= 1.3.1
    , jvm-parser
    , llvm-pretty >= 0.8
    , parameterized-utils

      -- internal subpackages/sublibraries in the saw tree
    , cryptol-saw-core
    , heapster-saw
    , saw-core
    , saw-core-coq
    , saw-script:saw-central

  hs-source-dirs: src

  exposed-modules:
    SAWScript.AutoMatch
    SAWScript.AutoMatch.Interaction
    SAWScript.AutoMatch.ArgMapping
    SAWScript.AutoMatch.Declaration
    SAWScript.AutoMatch.Cryptol
    SAWScript.AutoMatch.LLVM
    SAWScript.AutoMatch.JVM
    SAWScript.AutoMatch.Util
    SAWScript.Import
    SAWScript.Interpreter
    SAWScript.Lexer
    SAWScript.Panic
    SAWScript.Parser
    SAWScript.Search
    SAWScript.Token
    SAWScript.MGU

    SAWScript.HeapsterBuiltins

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count
  if impl(ghc == 8.0.1)
    ghc-options: -Wno-redundant-constraints

  build-tool-depends:
    alex:alex >= 3.1.3,
    happy:happy >= 1.9.4

executable saw
  default-language: Haskell2010
  hs-source-dirs: saw

  main-is: Main.hs

  other-modules:
    Paths_saw_script
    SAWScript.REPL
    SAWScript.REPL.Command
    SAWScript.REPL.Haskeline
    SAWScript.REPL.Logo
    SAWScript.REPL.Monad
    SAWScript.REPL.Trie

  autogen-modules:
    Paths_saw_script

  build-depends:

      -- upstream packages from hackage
      base >= 4.5
    , ansi-terminal
    , containers >= 0.5.8
    , directory
    , exceptions
    , filepath
    , haskeline
    , mtl
    , text
    , transformers

      -- packages in git submodules
    , aig
    , cryptol

      -- internal subpackages/sublibraries in the saw tree
    , cryptol-saw-core
    , heapster-saw
    , saw-core
    , saw-script:saw-version
    , saw-script:saw-central
    , saw-script

  GHC-options: -O2 -Wall -Werror -threaded -fno-ignore-asserts -fno-spec-constr-count -rtsopts

test-suite integration_tests
  type: exitcode-stdio-1.0
  hs-source-dirs: intTests

  ghc-options: -Wall -threaded
  default-language: Haskell2010

  main-is: IntegrationTest.hs

  build-depends:
                 -- upstream packages from hackage
                 base
               , directory
               , filemanip
               , filepath
               , process
               , tasty
               , tasty-hunit
               , tasty-expected-failure

  build-tool-depends: saw-script:saw
